# prism-search

./: README.md  app.py  prepro.py  preprocess.py  pyproject.toml  requirements.txt
static/: index.html  prism_entity.css
templates/: result-prism.html  result.html
