[tool.poetry]
name = "prism-search"
version = "0.1.0"
description = ""
authors = ["Shuntaro Yada <contact@shuntaroy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
Flask = "^1.1.2"
mojimoji = "^0.0.11"
medner-j = { git = "https://github.com/sociocom/MedNER-J.git"}

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
