[tool.poetry]
name = "prism-search"
version = "0.5.0"
description = "Web-based search engine to show similar clinical documents to a user-input clinical snippet"
authors = ["Shuntaro Yada <contact@shuntaroy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
Flask = "^1.1.2"
mojimoji = "^0.0.11"
medner-j = { git = "https://github.com/sociocom/MedNER-J.git" }
textformatting = { git = "https://github.com/ku-nlp/python-textformatting.git" }

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
